# Naphome-EchoBase

./: .gitignore  .gitmodules  API_KEY_SETUP.md  BOARD_SYNC_GUIDE.md  CMakeLists.txt  CREATE_GITHUB_REPO.md  DELIVERABLES.md  DEPLOYMENT_GUIDE.md  EQ_IMPLEMENTATION.md  FINAL_STATUS.md  FORK_SETUP_QUICK_REFERENCE.md  GEMINI_INTEGRATION.md  HARDWARE_REFERENCE.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  LICENSE  M5_PORTING_DOCUMENTATION.md  M5_QUICKSTART.md  M5_README.md  PHASE2_IMPLEMENTATION.md  PORTING_M5_GUIDE.md  PORTING_SUMMARY.md  README.md  READY_TO_FLASH.md  SETUP_GITHUB.md  SHARED_CODE_POLICY.md  START_HERE.md  flash.sh  partitions.csv  partitions_m5.csv  sdkconfig.backup  sdkconfig.defaults  sdkconfig.defaults.korvo1  sdkconfig.defaults.m5  setup_github.sh  sync-with-upstream.sh  test_gemini_api.py  test_streaming_simple.py  test_streaming_tts.py  test_tts_output.pcm  (+1 more)
boards/: korvo1.h  m5_echo_base.h
components/gemini/: CMakeLists.txt  README.md  gemini_api.c  streaming_base64.h
components/gemini/include/: gemini_api.h
components/helix_mp3/: CMakeLists.txt
components/helix_mp3/include/: mp3_decoder.h
components/helix_mp3/src/: mp3_decoder.c
components/openwakeword/: CMakeLists.txt  INTEGRATION.md  README.md  download_models.sh  openwakeword_esp32.cpp  openwakeword_wrapper.cpp
components/openwakeword/include/: openwakeword_esp32.h
drivers/audio/m5_echo_base/: CMakeLists.txt
drivers/audio/m5_echo_base/include/: m5_echo_base.h
drivers/audio/m5_echo_base/src/: m5_echo_base.c
logs/: .c17df0a09c11410355893ebecdae655e0a7d061b-audit.json
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_abstraction.c  audio_abstraction.h  audio_eq.c  audio_eq.h  audio_player.c  audio_player.h  board_config.h  google_cast.h  voice_assistant.c  voice_assistant.h  wake_word_manager.c  wake_word_manager.h  wifi_manager.c  wifi_manager.h
scripts/: README.md  record_measurement.py  rew_measure.sh
